@@ -1,6 +1,8 @@
 DIST pcc-1.0.0.tgz 652308 SHA256 5802dbba46d6ea3f9badaa55b9044a0416bb410020c24a5c2a8a2eaaf41156cb SHA512 201bd9d5c67cb7ea00f80c373e295fef643ba55aee22bf35a01b31ffaaaa6fe7c342394738f785b85c87e6404675669ae5b226c0921a6d48d850e6d0605e9bb5 WHIRLPOOL 4b9dfdd17d71626757d3db67e01b11dc509d355fb0f6c7a4abebd43289f84b43f794113f3987a0821f32133d512622704e21bbb247162e93d2b93566f8304cc5
 DIST pcc-20121112.tgz 780561 SHA256 bf640dc33bdd47d4c4f85d4360ec9555358cfa4de2b40c76f5b861430b80202e SHA512 7a8f3c45927a1291522f9b4b8c8d746e96c4a9761b9efc96e3dd0068fdf65b15b8bd2ccdc9021921cf68a9dd174f91f4614cf3eced0705ba077ecd6de5f1e573 WHIRLPOOL 25cf6f53550bb11e5313651214df2a5b4d919e9eaad0cded47fe3effc3bf60b14b2b966a05c7f4a0c223b23b5a4c4bbee2a6c6fb516341ab712729c886810106
+DIST pcc-20131013.tgz 781268 SHA256 b11a6f38d69588719a28669099af4f9eafb1c469cbe6edd1d26665fd9d3d0440 SHA512 a833dd1f98b06ee8705b27a9731f9d032e477a64c235e8bf1f46574be61db8b0bbf436b9d1c78e9bf31cb38a4fdb798d4085f005e2c24ebd9f8c5a1976ff414f WHIRLPOOL 58c43da594c9380abc1588269f9cbc749eba8eb29600ca6374989c0c4e08ea025050c3377fefd1f2cdad81510ad6f838b1563b93b9a0517dfc6551a4c8ae6968
 EBUILD pcc-1.0.0.ebuild 884 SHA256 30e8ce1f9ef2bd278010d8913a6f3126ba1d146b14e1990e9a19639bdc8ff144 SHA512 2d3804267ccbfba42253a555cffe99b95fcd4ce374ae3439d9f852cdd56d2d473614d368f184183500dce41898eb80ea92bc5ea346b3a421fb9510334272c2d9 WHIRLPOOL 0bcf038281bfdc2079853485c2e9cabb55f86323a960de9178322025f710f03a0406d2e86e473d91d49eace9b742c877af619487d87c0dda50b3622b7db5d338
 EBUILD pcc-1.0.1_pre20121112.ebuild 961 SHA256 2680c17c3b9f31c54537d0a7685db757af3346adeffd8c5514e0e6d2305e218a SHA512 385a3ab9832ec08a05cf239d3c593322eec51d3c64e850ea8137e7381b050604fde7d34a04e3d69e342c3e7fe3afd1650cd6ec5299e82d8c4a3501225571fed6 WHIRLPOOL 352b0ab0c683389827976efb7990cbde5dd03a7efaee09e9ffb6ad6e85a34d79a90385e8e1ecec4e3b41bd14d4b7ea632f599cf54c6d356d68cf5f553fd59d31
-MISC ChangeLog 1535 SHA256 58feec2de365fc03affa77c00b0d03b9595a0324c9e3e2df63c02c084eacbbbe SHA512 88fb4a9967a1da3c88b9cb4c48dd249e19d5121dbed572d0e18bbad6246b4990951852267b2d419d06dbc62ffdb8c4b31d150b4fde67748d70a8179ab14591b2 WHIRLPOOL c47c29fe150bfb41473c1031748f9af8f45657321e8000e8889b5c6c139954795cc9c98ec84106945af0e1aa025f225d90dde2c4714a8f4ae0b9e9e845ec103a
+EBUILD pcc-1.0.1_pre20131013.ebuild 961 SHA256 f5247f02b18a4e37b19a355570a00b17d358e59aa4ac199465e20eab210cfa0b SHA512 f272fe98e5eb181946ae2dbc49c1fe61a9540dbff90c02cfd744446f87e3ee552a5d8d1eca3d5062cd3fbc785006a51fa13f96750c02f12c8308b2515327a530 WHIRLPOOL 87609866f93d5edd97aa0eff5fb94734db3eb0bdab607b05a4c512146be3a0ed71be3677dfeb4d19f0ecfd82e6e169f1d52154cf886f28320ed3d639d69cd178
+MISC ChangeLog 1662 SHA256 7d81ec391eb2f0edb47b63d8469daef4fddc48f28b1b0ebf4a456222d96bfa56 SHA512 1060593678d4c5fe233d56f2cc15f1692ac332bbad920c627e6d372103a9c84e242d8c8d49ec7d7fec3ad47ca7155dee36e1abc1086080d232da31a90a4c9c5d WHIRLPOOL 8b8197f6ca8132bcf9e44c33bdaf9c60faee230fc459ffbde28d32100ecbc512eed49c8c700bd8450ba0174395ad2aec8f46e0444a969e9fb922321e3a6d71d9
 MISC metadata.xml 233 SHA256 65209e280ca6de32a92e1a57301ff69fb3472e55ba07848d6f80405d35e92d47 SHA512 0d30bfb39315a04767e07896409f5d3954f8e954e20fcbac7b92bb9a636c9f61c50b1b2cf55e6c1db9a199a0edc159b5c8cc8f541efb9c4adafa28e3652cff7b WHIRLPOOL 027c5101e1cbc665c9d2ef240f73a874c9f49a9b70175c5947e012df61de484585088a46b6ce9078816e548e6bcc326e7223539cc999159eee2757d0a2eb1480
