@@ -1,6 +1,6 @@
 # Copyright 1999-2013 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/pcc-libs/pcc-libs-1.0.1_pre20121112.ebuild,v 1.2 2013/10/13 12:48:25 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/pcc-libs/pcc-libs-1.0.1_pre20131013.ebuild,v 1.1 2013/10/13 12:48:25 patrick Exp $
 
 EAPI=2
 
