@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare
+DEPEND=>=dev-libs/pcc-libs-1.0.1_pre20131013 || ( >=sys-devel/automake-1.12:1.12 >=sys-devel/automake-1.13:1.13 ) >=sys-devel/autoconf-2.68 sys-devel/libtool
+DESCRIPTION=pcc portable c compiler
+EAPI=2
+HOMEPAGE=http://pcc.ludd.ltu.se
+KEYWORDS=~x86 ~amd64 ~amd64-fbsd
+LICENSE=BSD
+RDEPEND=>=dev-libs/pcc-libs-1.0.1_pre20131013
+SLOT=0
+SRC_URI=ftp://pcc.ludd.ltu.se/pub/pcc/pcc-20131013.tgz
+_eclasses_=autotools	16761a2f972abd686713e5967ff3c754	eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
+_md5_=092126704c840a749f7729eaca594cd9
