@@ -5,6 +5,6 @@ HOMEPAGE=http://pcc.ludd.ltu.se
 KEYWORDS=~x86 ~amd64 ~amd64-fbsd
 LICENSE=BSD
 SLOT=0
-SRC_URI=ftp://pcc.ludd.ltu.se/pub/pcc-libs/pcc-libs-20121112.tgz
+SRC_URI=ftp://pcc.ludd.ltu.se/pub/pcc-libs/pcc-libs-20131013.tgz
 _eclasses_=eutils	4878e7f88afc0ba0866ac112190b0fd4	multilib	892e597faee02a5b94eb02ab512e7622	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28	versionator	6601b4c5b3f019a993db59a50e1854e4
-_md5_=4b7f427f455567e1a4ad64c434f998d6
+_md5_=4a254e029190b4043a2a674a88a7f560
