@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/pcc-libs
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/pcc-libs/ChangeLog,v 1.10 2012/11/13 06:41:27 patrick Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/pcc-libs/ChangeLog,v 1.11 2013/10/13 12:48:25 patrick Exp $
+
+*pcc-libs-1.0.1_pre20131013 (13 Oct 2013)
+
+  13 Oct 2013; Patrick Lauer <patrick@gentoo.org>
+  +pcc-libs-1.0.1_pre20131013.ebuild, pcc-libs-1.0.1_pre20121112.ebuild:
+  Bump
 
   13 Nov 2012; Patrick Lauer <patrick@gentoo.org>
   -pcc-libs-1.0.0_pre100604.ebuild, -pcc-libs-1.0.0_pre100830.ebuild,
