@@ -1,6 +1,11 @@
 # ChangeLog for dev-lang/pcc
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/pcc/ChangeLog,v 1.10 2013/10/12 07:20:10 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/pcc/ChangeLog,v 1.11 2013/10/13 12:50:21 patrick Exp $
+
+*pcc-1.0.1_pre20131013 (13 Oct 2013)
+
+  13 Oct 2013; Patrick Lauer <patrick@gentoo.org> +pcc-1.0.1_pre20131013.ebuild:
+  Bump
 
   12 Oct 2013; Patrick Lauer <patrick@gentoo.org> pcc-1.0.1_pre20121112.ebuild:
   Minor cleanups
